--- a/index.html
+++ b/index.html
@@ -44,6 +44,8 @@
 </script>
 </head>
   <body class="bg-gray-950 text-gray-100 antialiased overflow-hidden">
-    <div id="root"></div>
+    <div id="root">
+      <script type="module" src="/index.tsx"></script>
+    </div>
   </body>
 </html>
